...
    <string name="settings">Settings</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="custom">Custom</string>
    <string name="training">Training</string>
    <string name="bow">Bow</string>
    <string name="arrow">Arrow</string>
    <string name="round">Round</string>
    <string name="points">Points</string>
    <string name="passe">End</string>

    <!-- Overview -->
...
    </plurals>
    <plurals name="passe_selected">
        <item quantity="one">%d end selected</item>
        <item quantity="other">%d ends selected</item>
    </plurals>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="statistic">Statistic</string>

    <!-- Share -->
    <string name="share">Share</string>
    <string name="dispersion_pattern">Dispersion pattern</string>
...
    <string name="material">Material</string>

    <!-- New round -->
    <string name="title">Title</string>
    <string name="outdoor">Outdoor</string>
    <string name="indoor">Indoor</string>
    <string name="distance">Distance</string>
    <string name="format">Format</string>

    <!-- x ends of y arrows -->
    <plurals name="passe">
        <item quantity="one">%d end</item>
        <item quantity="other">%d ends</item>
...
    <string name="info">Information</string>
    <string name="data">Data</string>
    <string name="weather">Weather</string>
    <string name="environment">Environment</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_direction">Wind direction</string>
    <string name="sight_setting_removed">Sight setting deleted!</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>

    <string name="undo">Undo</string>
    <string name="standard_rounds">Standard rounds</string>
    <string name="expand_collapse">Expand/Collapse</string>
...
    <string name="bow_string">String</string>
    <string name="bow_scope_magnification">Scope magnification</string>
    <string name="bow_rest_stiffness">Stiffness</string>
    <string name="bow_button">Button</string>
    <string name="more_fields">More fields</string>
    <string name="recently_used">Recently used</string>
    <string name="intro_title_track_training_progress">Forget paper scoresheets!</string>
    <string name="intro_description_track_training_progress">With exact arrow plotting,\nyou can get more useful insights\nout of your training data.</string>
    <string name="intro_title_everything_in_one_place">Everything you need\nin one place</string>
    <string name="intro_description_everything_in_one_place">Including bow-, arrow-\nand sightmark-management,\narchery timer, statistics \nand much more…</string>
    <string name="average_arrow_score_per_end">Average arrow score per end</string>
    <string name="show_end">Show end</string>
    <string name="show_round">Show round</string>
    <string name="show_training">Show training</string>
    <string name="summary">Summary</string>
...
