<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.dreier.mytargets.views.selector.SimpleDistanceSelector
            android:id="@+id/distanceSpinner"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <EditText
            android:id="@+id/sightSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            android:layout_toLeftOf="@+id/removeSightSetting"
            android:layout_toStartOf="@+id/removeSightSetting"
            android:ems="10"
            android:inputType="text"/>

        <ImageButton
            android:id="@+id/removeSightSetting"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/delete"
            app:srcCompat="@drawable/ic_cancel_grey600_24dp"/>
    </RelativeLayout>

</layout>