...
        android:id="@+id/fabBowCompound"
        android:icon="@drawable/ic_compat_bow_compound_white_24dp"
        android:orderInCategory="4"
        android:title="@string/compound_bow"/>

    <item
        android:id="@+id/fabBowRecurve"
        android:icon="@drawable/ic_compat_bow_recurve_white_24dp"
        android:orderInCategory="5"
        android:title="@string/recurve_bow"/>

</menu>

