...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/sight_settings"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sightMarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="LinearLayoutManager"/>

            <Button
                android:id="@+id/addButton"
                style="@style/propertyAddButton"
                android:text="@string/add"/>

        </LinearLayout>
    </LinearLayout>
</layout>
...
